[gd_scene load_steps=4 format=3 uid="uid://de4d16iyix488"]

[ext_resource type="Script" uid="uid://xdsrg4lhooyu" path="res://editor.gd" id="1_1qsck"]
[ext_resource type="Script" uid="uid://blsl63avkcrta" path="res://camera_controller.gd" id="2_agv3s"]
[ext_resource type="Script" uid="uid://e3f1ox6y6cvg" path="res://addons/Gizmo3DScript/gizmo3D.gd" id="3_agv3s"]

[node name="Editor" type="Node3D"]
script = ExtResource("1_1qsck")

[node name="_" type="Node" parent="."]

[node name="GUI" type="Control" parent="_"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HSplitContainer" type="HSplitContainer" parent="_/GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="_/GUI/HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="_/GUI/HSplitContainer/PanelContainer"]
layout_mode = 2

[node name="Button_Add" type="Button" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Add"

[node name="HBoxContainer" type="HBoxContainer" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Button_Save" type="Button" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="Button_Load" type="Button" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load"

[node name="ScrollContainer" type="ScrollContainer" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inspector" type="VBoxContainer" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label_Name" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2
text = "Name:"

[node name="LineEdit_name" type="LineEdit" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Label_Position" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2
size_flags_vertical = 1
text = "Position:"

[node name="HBoxContainer" type="HBoxContainer" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2

[node name="Label_position_x" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "X "

[node name="LineEdit_position_x" type="LineEdit" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12

[node name="HBoxContainer2" type="HBoxContainer" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2

[node name="Label_position_y" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer2"]
layout_mode = 2
text = "Y "

[node name="LineEdit_position_y" type="LineEdit" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12

[node name="HBoxContainer3" type="HBoxContainer" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2

[node name="Label_position_z" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer3"]
layout_mode = 2
text = "Z "

[node name="LineEdit_position_z" type="LineEdit" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12

[node name="Label_Rotation" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2
text = "Rotation:"

[node name="HBoxContainer4" type="HBoxContainer" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2

[node name="Label_rotation_x" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer4"]
layout_mode = 2
text = "X "

[node name="LineEdit_rotation_x" type="LineEdit" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12

[node name="HBoxContainer5" type="HBoxContainer" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2

[node name="Label_rotation_y" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer5"]
layout_mode = 2
text = "Y "

[node name="LineEdit_rotation_y" type="LineEdit" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12

[node name="HBoxContainer6" type="HBoxContainer" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2

[node name="Label_rotation_z" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer6"]
layout_mode = 2
text = "Z "

[node name="LineEdit_rotation_z" type="LineEdit" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12

[node name="Label_Scale" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2
text = "Scale:"

[node name="HBoxContainer7" type="HBoxContainer" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2

[node name="Label_scale_x" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer7"]
layout_mode = 2
text = "X "

[node name="LineEdit_scale_x" type="LineEdit" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12

[node name="HBoxContainer8" type="HBoxContainer" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2

[node name="Label_scale_y" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer8"]
layout_mode = 2
text = "Y "

[node name="LineEdit_scale_y" type="LineEdit" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer8"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12

[node name="HBoxContainer9" type="HBoxContainer" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2

[node name="Label_scale_z" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer9"]
layout_mode = 2
text = "Z "

[node name="LineEdit_scale_z" type="LineEdit" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer9"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12

[node name="Label_Extra_data" type="Label" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
layout_mode = 2
text = "Extra data:"

[node name="CodeEdit_extra_data" type="CodeEdit" parent="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12

[node name="Viewport_padding" type="Control" parent="_/GUI/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveFileDialog" type="FileDialog" parent="_/GUI"]
unique_name_in_owner = true
access = 2
filters = PackedStringArray("*.json")

[node name="LoadFileDialog" type="FileDialog" parent="_/GUI"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="AddMapObjectPopup" type="PopupPanel" parent="_/GUI"]
unique_name_in_owner = true
mode = 2
initial_position = 2
size = Vector2i(640, 480)

[node name="VBoxContainer" type="VBoxContainer" parent="_/GUI/AddMapObjectPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 636.0
offset_bottom = 476.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit_add_search" type="LineEdit" parent="_/GUI/AddMapObjectPopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
placeholder_text = "Search"

[node name="ScrollContainer" type="ScrollContainer" parent="_/GUI/AddMapObjectPopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="AddMapObjectButtonsGrid" type="HFlowContainer" parent="_/GUI/AddMapObjectPopup/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Lights" type="Node" parent="_"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="_/Lights"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0)
directional_shadow_mode = 0
sky_mode = 1

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="_/Lights"]
directional_shadow_mode = 0
sky_mode = 1

[node name="DirectionalLight3D3" type="DirectionalLight3D" parent="_/Lights"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
directional_shadow_mode = 0
sky_mode = 1

[node name="DirectionalLight3D4" type="DirectionalLight3D" parent="_/Lights"]
transform = Transform3D(1, 0, 0, 0, -1, 8.742278e-08, 0, -8.742278e-08, -1, 0, 0, 0)
directional_shadow_mode = 0
sky_mode = 1

[node name="DirectionalLight3D5" type="DirectionalLight3D" parent="_/Lights"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 0, 0)
directional_shadow_mode = 0
sky_mode = 1

[node name="DirectionalLight3D6" type="DirectionalLight3D" parent="_/Lights"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, 0)
directional_shadow_mode = 0
sky_mode = 1

[node name="EditorCamera" type="Camera3D" parent="_"]
unique_name_in_owner = true
current = true
fov = 90.0
near = 0.1
far = 10000.0
script = ExtResource("2_agv3s")

[node name="Gizmo3D" type="Node3D" parent="_"]
unique_name_in_owner = true
visible = false
script = ExtResource("3_agv3s")
show_selection_box = false
metadata/_custom_type_script = "uid://e3f1ox6y6cvg"

[connection signal="pressed" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/Button_Add" to="." method="_on_button_add_pressed"]
[connection signal="pressed" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/HBoxContainer/Button_Save" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/HBoxContainer/Button_Load" to="." method="_on_button_load_pressed"]
[connection signal="text_submitted" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/LineEdit_name" to="." method="_on_line_edit_name_text_submitted"]
[connection signal="text_submitted" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer/LineEdit_position_x" to="." method="_on_line_edit_position_x_text_submitted"]
[connection signal="text_submitted" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer2/LineEdit_position_y" to="." method="_on_line_edit_position_y_text_submitted"]
[connection signal="text_submitted" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer3/LineEdit_position_z" to="." method="_on_line_edit_position_z_text_submitted"]
[connection signal="text_submitted" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer4/LineEdit_rotation_x" to="." method="_on_line_edit_rotation_x_text_submitted"]
[connection signal="text_submitted" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer5/LineEdit_rotation_y" to="." method="_on_line_edit_rotation_y_text_submitted"]
[connection signal="text_submitted" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer6/LineEdit_rotation_z" to="." method="_on_line_edit_rotation_z_text_submitted"]
[connection signal="text_submitted" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer7/LineEdit_scale_x" to="." method="_on_line_edit_scale_x_text_submitted"]
[connection signal="text_submitted" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer8/LineEdit_scale_y" to="." method="_on_line_edit_scale_y_text_submitted"]
[connection signal="text_submitted" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/HBoxContainer9/LineEdit_scale_z" to="." method="_on_line_edit_scale_z_text_submitted"]
[connection signal="text_changed" from="_/GUI/HSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/Inspector/CodeEdit_extra_data" to="." method="_on_code_edit_extra_data_text_changed"]
[connection signal="mouse_entered" from="_/GUI/HSplitContainer/Viewport_padding" to="." method="_on_viewport_padding_mouse_entered"]
[connection signal="file_selected" from="_/GUI/SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
[connection signal="file_selected" from="_/GUI/LoadFileDialog" to="." method="_on_load_file_dialog_file_selected"]
[connection signal="text_changed" from="_/GUI/AddMapObjectPopup/VBoxContainer/LineEdit_add_search" to="." method="_on_line_edit_add_search_text_changed"]
[connection signal="transform_changed" from="_/Gizmo3D" to="." method="_on_gizmo_3d_transform_changed"]
